[package]
name = "WojakNT"
version = "0.1.0"
authors = ["brvsh <b@brv.sh>"]
edition = "2021"

[build-dependencies]
winreg = "0.52.0"
failure = { version = "0.1.8", default-features = false, features = ["std"] }

[profile.dev]
panic = "abort"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
obfstr = "0.4.4"

[dependencies.winapi]
git = "https://github.com/Trantect/winapi-rs.git"
branch = "feature/km"
features = [
	"wdm",
	"ntstatus",
]
